website/versioned_docs/version-0.74/native-api/DynamicAutomationProperties-api-windows.md
---
id: version-0.74-DynamicAutomationProperties
title: DynamicAutomationProperties
original_id: DynamicAutomationProperties
---

Kind: `class`



## Properties
### AccessibilityActionEventHandlerProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityActionEventHandlerProperty`

### AccessibilityActionsProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityActionsProperty`

### AccessibilityInvokeEventHandlerProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityInvokeEventHandlerProperty`

### AccessibilityRoleProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityRoleProperty`

### AccessibilityStateBusyProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityStateBusyProperty`

### AccessibilityStateCheckedProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityStateCheckedProperty`

### AccessibilityStateDisabledProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityStateDisabledProperty`

### AccessibilityStateExpandedProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityStateExpandedProperty`

### AccessibilityStateSelectedProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityStateSelectedProperty`

### AccessibilityValueMaxProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityValueMaxProperty`

### AccessibilityValueMinProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityValueMinProperty`

### AccessibilityValueNowProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityValueNowProperty`

### AccessibilityValueTextProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AccessibilityValueTextProperty`

### AriaRoleProperty
`static`   `readonly`  [`DependencyProperty`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.DependencyProperty) `AriaRoleProperty`



## Methods
### GetAccessibilityActionEventHandler
`static` [`AccessibilityActionEventHandler`](AccessibilityActionEventHandler) **`GetAccessibilityActionEventHandler`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityActions
`static` [`IVector`](https://docs.microsoft.com/uwp/api/Windows.Foundation.Collections.IVector-1)<[`AccessibilityAction`](AccessibilityAction)> **`GetAccessibilityActions`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityInvokeEventHandler
`static` [`AccessibilityInvokeEventHandler`](AccessibilityInvokeEventHandler) **`GetAccessibilityInvokeEventHandler`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityRole
`static` [`AccessibilityRoles`](AccessibilityRoles) **`GetAccessibilityRole`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityStateBusy
`static` bool **`GetAccessibilityStateBusy`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityStateChecked
`static` [`AccessibilityStateCheckedValue`](AccessibilityStateCheckedValue) **`GetAccessibilityStateChecked`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityStateDisabled
`static` bool **`GetAccessibilityStateDisabled`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityStateExpanded
`static` bool **`GetAccessibilityStateExpanded`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityStateSelected
`static` bool **`GetAccessibilityStateSelected`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityValueMax
`static` double **`GetAccessibilityValueMax`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityValueMin
`static` double **`GetAccessibilityValueMin`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityValueNow
`static` double **`GetAccessibilityValueNow`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAccessibilityValueText
`static` string **`GetAccessibilityValueText`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### GetAriaRole
`static` [`AriaRole`](AriaRole) **`GetAriaRole`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element)



### SetAccessibilityActionEventHandler
`static` void **`SetAccessibilityActionEventHandler`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, [`AccessibilityActionEventHandler`](AccessibilityActionEventHandler) value)



### SetAccessibilityActions
`static` void **`SetAccessibilityActions`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, [`IVector`](https://docs.microsoft.com/uwp/api/Windows.Foundation.Collections.IVector-1)<[`AccessibilityAction`](AccessibilityAction)> value)



### SetAccessibilityInvokeEventHandler
`static` void **`SetAccessibilityInvokeEventHandler`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, [`AccessibilityInvokeEventHandler`](AccessibilityInvokeEventHandler) value)



### SetAccessibilityRole
`static` void **`SetAccessibilityRole`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, [`AccessibilityRoles`](AccessibilityRoles) value)



### SetAccessibilityStateBusy
`static` void **`SetAccessibilityStateBusy`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, bool value)



### SetAccessibilityStateChecked
`static` void **`SetAccessibilityStateChecked`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, [`AccessibilityStateCheckedValue`](AccessibilityStateCheckedValue) value)



### SetAccessibilityStateDisabled
`static` void **`SetAccessibilityStateDisabled`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, bool value)



### SetAccessibilityStateExpanded
`static` void **`SetAccessibilityStateExpanded`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, bool value)



### SetAccessibilityStateSelected
`static` void **`SetAccessibilityStateSelected`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, bool value)



### SetAccessibilityValueMax
`static` void **`SetAccessibilityValueMax`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, double value)



### SetAccessibilityValueMin
`static` void **`SetAccessibilityValueMin`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, double value)



### SetAccessibilityValueNow
`static` void **`SetAccessibilityValueNow`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, double value)



### SetAccessibilityValueText
`static` void **`SetAccessibilityValueText`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, string value)



### SetAriaRole
`static` void **`SetAriaRole`**([`UIElement`](https://docs.microsoft.com/uwp/api/Windows.UI.Xaml.UIElement) element, [`AriaRole`](AriaRole) value)




